[package]
name = "etrade"
version = "0.1.0"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Wraps the etrade API and implements the oauth flows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
keychain = ["secret-service", "security-framework", "byteorder", "winapi"]

[dependencies]
http = "0.2"
http-body = "0.3"
hyper = { version = "0.13" }
hyper-tls = "0.4"
futures="0.3"
anyhow="1"
bytes = "0.5"
tokio = {version="0.2", features=["full"]}
log = { version = "0.4", features = ["kv_unstable", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
serde_urlencoded = "0.7"
secstr = { version = "0.4", features = ["serde", "libsodium-sys" ] }
libsodium-sys = { version = "0" }
thiserror = "1"
async-trait = "0.1"
oauth = { version="0.4", package = "oauth1-request" }
oauth-credentials = { version = "0.2", features = ["serde"] }
tower-service = "0.3"
chrono = "0.4"
chrono-tz = "0.5"
quick-xml = { version = "0.20", features = ["serialize"] }
strum = { version = "0.20", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.4"

[target."cfg(target_os = \"linux\")".dependencies.secret-service]
version = "1"
optional = true
[target."cfg(target_os = \"macos\")".dependencies.security-framework]
version = "2"
optional = true

[target."cfg(target_os = \"macos\")".dev-dependencies.keychain-services]
version = "0.1"

[target."cfg(target_os = \"macos\")".dev-dependencies.tempfile]
version = "3"

[target."cfg(target_os = \"windows\")".dependencies.byteorder]
version = "1.2.1"
optional = true

[target."cfg(target_os = \"windows\")".dependencies.winapi]
version = "0.3"
features = ["wincred", "minwindef"]
optional = true


