[package]
name = "etrade"
version = "0.5.0"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Wraps the etrade API and implements the oauth flows"
repository = "https://github.com/casualjim/rs-etrade"
categories = ["api-bindings"]
keywords = ["quote", "finance", "etrade", "stocks","stock-options"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
keychain = ["secret-service", "security-framework", "byteorder", "winapi"]

[dependencies]
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
futures="0.3"
anyhow="1"
bytes = "1"
tokio = {version="1", features=["full"]}
log = { version = "0.4", features = ["kv_unstable_std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
secstr = { version = "0.5", features = ["serde", "libsodium-sys" ] }
libsodium-sys = { version = "0" }
thiserror = "1"
async-trait = "0.1"
oauth = { version="0.6", package = "oauth1-request" }
oauth-credentials = { version = "0.3", features = ["serde"] }
chrono = "0.4"
chrono-tz = "0.8"
quick-xml = { version = "0.27", features = ["serialize"] }
strum = { version = "0.24", features = ["derive"] }

# etradectl deps
structopt = "0.3"
bat = "0.22"
pretty_env_logger = "0.4"
prettytable-rs = "0.10"

[dev-dependencies]
pretty_env_logger = "0.4"

[target."cfg(target_os = \"linux\")".dependencies.secret-service]
version = "2"
optional = true

[target."cfg(target_os = \"macos\")".dependencies.security-framework]
version = "2"
optional = true

[target."cfg(target_os = \"macos\")".dev-dependencies.tempfile]
version = "3"

[target."cfg(target_os = \"windows\")".dependencies.byteorder]
version = "1.3"
optional = true

[target."cfg(target_os = \"windows\")".dependencies.winapi]
version = "0.3"
features = ["wincred", "minwindef"]
optional = true


[[bin]]
name = "etradectl"
path = "src/bin/etradectl/main.rs"