[package]
name = "etrade"
version = "0.1.0"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10", features=["json"] }
reqwest-oauth1 = "0.1"
futures-util = "0.3"
tokio = {version="0.2", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
urldecode = "0.1"
secstr = { version = "0.4", features = ["serde", "libsodium-sys" ] }
libsodium-sys = { version = "0" }
pre = { version = "=0.2" }
thiserror = "*"
anyhow = "*"
log = "*"
oauth1-request = "0.3"
async-trait = "0.1"