[package]
name = "etradectl"
version = "0.1.0"
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest-oauth1 = "0.1"
http = "0.2"
http-body = "0.3"
hyper = { version = "0.13" }
hyper-tls = "0.4"
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures="0.3"
futures-util = "0.3"
secret-service = "1"
anyhow="1"
bytes = "0.5"
tokio = {version="0.2", features=["full"]}
# reqwest = { version="0.10", features=["json"] }
log = "0.4"
pretty_env_logger = "0.4"
urldecode = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
secstr = { version = "0.4", features = ["serde", "libsodium-sys" ] }
libsodium-sys = { version = "0" }
# pre = { version = "=0.2" }
thiserror = "*"
colored_json = "*"
# etrade = { path = "../etrade" }
async-trait = "0.1"
oauth = { version="0.4", package = "oauth1-request" }
oauth-credentials = { version = "0.2", features = ["serde"] }
tower-service = "0.3"
pin-project = "1"